table and code dark mode switch correction

--- a/css/main.scss
+++ b/css/main.scss
@@ -2,15 +2,17 @@
 ---
 
 html, html[data-theme="light"] {
-	--link-color: rgb(0, 112, 201);
+  --link-color: rgb(0, 112, 201);
   --main-background-color: hsl(0, 0%, 90%);
   --main-text-color: hsl(0, 0%, 20%);
+  --code-background-color: rgba(27,31,35,0.05);	
 }
 
 html[data-theme="dark"] {
   --link-color: rgb( 100, 210, 255);
   --main-background-color: hsl(0, 0%, 20%);
-  --main-text-color: hsl(0, 0%, 85%); 
+  --main-text-color: hsl(0, 0%, 85%);
+  --code-background-color: rgba(255, 255, 255, 0.05);
 }
 
 
@@ -18,32 +20,42 @@ html[data-theme="dark"] {
     html, html[data-theme="dark"] {
       --link-color: rgb( 100, 210, 255);
     	--main-background-color: hsl(0, 0%, 20%);
-    	--main-text-color: hsl(0, 0%, 85%); 
+    	--main-text-color: hsl(0, 0%, 85%);
+	--code-background-color: rgba(255, 255, 255, 0.05);
     }
 
     html[data-theme="light"] {
 		  --link-color: rgb(0, 112, 201);
     	--main-background-color: hsl(0, 0%, 90%);
-  	 --main-text-color: hsl(0, 0%, 20%);
+  	--main-text-color: hsl(0, 0%, 20%);
+	--code-background-color: rgba(27,31,35,0.05); 
   } 
 }
 
 
-body, table, tbody, th, tr, td, border-color, border, code {
+body, td {
 	background-color: var(--main-background-color);
 	color: var(--main-text-color);
-	border-color: var(--main-text-color);
 	/* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	padding: 1em;*/
 }
-/* .markdown-body table th, .markdown-body table tr, .markdown-body table td {
-	background-color: var(--main-background-color);
+
+/* --code-background-color: rgba(27,31,35,0.05); light
+--code-background-color: rgba(255, 255, 255, 0.05); dark */
+
+.markdown-body code, .markdown-body tt {
 	color: var(--main-text-color);
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	padding: 1em;
+	background-color: var(--code-background-color)
 }
 
-*/
+.markdown-body code, .markdown-body tt {
+	color: var(--main-text-color);
+	background-color: var(--code-background-color)
+}
+
+.markdown-body table td {
+border-color: var(--main-text-color);
+}
 
 a {
 	color: var(--link-color);
